@@ -33,4 +33,5 @@ use IkiWiki::Setup::Standard {
 	disable_plugins => [qw{recentchanges openid}],
 	rcs => $rcs,
 	gitorigin_branch => '', # don't pull during build
+	deterministic => 1,
 }
