@@ -33,6 +33,7 @@ ikiwiki (3.20150330) UNRELEASED; urgency=medium
     release, leading to unstable sorting
   * Sort backlinks deterministically, by falling back to sorting by href
     if the link text is identical
+  * Add a $config{deterministic} option and use it for the docwiki
 
  -- Joey Hess <id@joeyh.name>  Tue, 28 Apr 2015 12:24:08 -0400
 
